//
//  CharacterGender.swift
//  OhMyRick
//
//  Created by Alessandro Bizzoni on 17/4/24.
//

import Foundation

enum CharacterGender: String, Decodable, CaseIterable, Encodable {
    case female = "Female"
    case male = "Male"
    case genderless = "Genderless"
    case unknown
}
