...
    let kTitleHeight: CGFloat = 100
    
    let kTitleSize: CGFloat = 50
    
    let kPortalHeight: CGFloat = 320
    
    let kScreenTitle: String = "Oh My Rick"
    
    let kButtonCharactersTitle: String = "Characters"
    
    @EnvironmentObject private var coordinator: Coordinator
    
    var body: some View {
        VStack(spacing: 80) {
            Text(kScreenTitle)
...
